--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,14 @@
     font-style: normal;
     font-display: swap;
 }
+
+.navbar {
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    border-radius: 16px;
+    border: 3px rgba(255, 255, 255, 0.2) solid;
+    z-index: 10;
+    left: 50%;
+    min-width: fit-content;
+    transform: translateX(-50%);
+}
